<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>hadesos::ModifySharedHostFolderDialog</class>
 <widget class="QDialog" name="hadesos::ModifySharedHostFolderDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>576</width>
    <height>106</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Modify shared host folder</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <property name="leftMargin">
    <number>8</number>
   </property>
   <property name="topMargin">
    <number>8</number>
   </property>
   <property name="rightMargin">
    <number>8</number>
   </property>
   <property name="bottomMargin">
    <number>8</number>
   </property>
   <property name="spacing">
    <number>4</number>
   </property>
   <item row="0" column="0">
    <widget class="QLabel" name="_volumeNameLabel">
     <property name="text">
      <string>Volume name:</string>
     </property>
    </widget>
   </item>
   <item row="0" column="1">
    <widget class="QLineEdit" name="_volumeNameLineEdit"/>
   </item>
   <item row="1" column="0">
    <widget class="QLabel" name="_hostPathLabel">
     <property name="text">
      <string>Host path:</string>
     </property>
    </widget>
   </item>
   <item row="1" column="1">
    <widget class="QLineEdit" name="_hostPathLineEdit"/>
   </item>
   <item row="1" column="2">
    <widget class="QPushButton" name="_browsePushButton">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>...</string>
     </property>
    </widget>
   </item>
   <item row="2" column="0">
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>8</width>
       <height>8</height>
      </size>
     </property>
    </spacer>
   </item>
   <item row="3" column="0" colspan="3">
    <widget class="QDialogButtonBox" name="_buttonBox">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="standardButtons">
      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>_buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>hadesos::ModifySharedHostFolderDialog</receiver>
   <slot>_accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>248</x>
     <y>254</y>
    </hint>
    <hint type="destinationlabel">
     <x>157</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>_buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>hadesos::ModifySharedHostFolderDialog</receiver>
   <slot>_reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>316</x>
     <y>260</y>
    </hint>
    <hint type="destinationlabel">
     <x>286</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>_volumeNameLineEdit</sender>
   <signal>textChanged(QString)</signal>
   <receiver>hadesos::ModifySharedHostFolderDialog</receiver>
   <slot>_volumeNameLineEditTextChanged(QString)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>291</x>
     <y>19</y>
    </hint>
    <hint type="destinationlabel">
     <x>287</x>
     <y>52</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>_hostPathLineEdit</sender>
   <signal>textChanged(QString)</signal>
   <receiver>hadesos::ModifySharedHostFolderDialog</receiver>
   <slot>_hostPathLineEditTextChanged(QString)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>291</x>
     <y>46</y>
    </hint>
    <hint type="destinationlabel">
     <x>287</x>
     <y>52</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>_browsePushButton</sender>
   <signal>clicked()</signal>
   <receiver>hadesos::ModifySharedHostFolderDialog</receiver>
   <slot>_browsePushButtonClicked()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>527</x>
     <y>46</y>
    </hint>
    <hint type="destinationlabel">
     <x>287</x>
     <y>52</y>
    </hint>
   </hints>
  </connection>
 </connections>
 <slots>
  <slot>_accept()</slot>
  <slot>_reject()</slot>
  <slot>_volumeNameLineEditTextChanged(QString)</slot>
  <slot>_hostPathLineEditTextChanged(QString)</slot>
  <slot>_browsePushButtonClicked()</slot>
 </slots>
</ui>
